Numerous changes/updates (dialog engine, webappos dojo theme, etc.)